src/components/Home/styles.scss
#home {
    padding: 20px 0;
    .left-section {
        width: 60%;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        margin: 0 0 0 4%;
        
        .typed {
            display: flex;
            font-size: 28px;
            font-weight: 600;
        }
        
        .info {
            border-top: 2px solid white;
            width: 80%;
            margin-top: 40px;
            
            p {
                font-family: 'Edu NSW ACT Foundation', cursive;
                font-size: 18px;
                padding: 10px;
            }
        }
    }
    
    .right-section {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 40%;
        height: 90vh;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        margin: -100px 0 0 -10%;
        
        img {
            object-fit: cover;
            width: 30%;
            aspect-ratio: 1;
            border-radius: 50%;
        }
        .type-wrap {
            margin: 20px;
            
            .typed-span {
                font-family: 'Edu NSW ACT Foundation', cursive;
                white-space: pre;
                font-size: 20px;
                font-weight: 600;
            }
            
            .typed-cursor {
                font-family: 'Edu NSW ACT Foundation', cursive;
                font-size: 20px;
                font-weight: 600;
            }
        }
        a {
            .resume {
                position: absolute;
                font-family: 'Edu VIC WA NT Beginner', cursive;
                font-size: 18px;
                width: 160px;
                height: 50px;
                margin: 0px 0 0 -80px;
                background: black;
                border-radius: 6px;
                color: white;
                cursor: pointer;
                transition: all 0.3s ease;
                
                &:hover {
                    background: white;
                    color: black;
                }
            }
        }
        
    }
}

@media (max-width: 768px) {
    #home {
        margin: 0;
        .left-section {
            width: 100%;
            height: 100vh;
            padding: 20px;
            margin-top: -20px;
            margin-left: 0;
            overflow: scroll;
            padding-bottom: 200px;
            z-index: 1;


            .typed {
                margin-bottom: 250px;
            }

            .info {
                width: 100%;
            }
        }

        .right-section {
            position: absolute;
            top: 120px;
            margin: 0;
            width: 100%;
            height: auto;
        }
    }
}

